--- a/pepeizqs deals web/Areas/Identity/Componentes/CuentaSteam.razor
+++ b/pepeizqs deals web/Areas/Identity/Componentes/CuentaSteam.razor
@@ -127,9 +127,9 @@
 
 	private bool errorCuentaUsada = false;
 
-	protected override async Task OnInitializedAsync()
+	protected override void OnInitialized()
 	{
-		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
 
 		if (usuario != null)
 		{
