--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -293,7 +293,7 @@
 
 		//------------------------------------------------------------
 
-		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
 
 		if (usuario != null)
 		{
