--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -129,27 +129,27 @@
 
                         <hr>
 
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/historical-lows">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
                         </a>                       
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Bundles">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/bundles">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Bundles")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Free">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/free">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Free")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Subscriptions">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/subscriptions">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Subscriptions")
                         </a>
                         <hr>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Giveaways">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/giveaways">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Giveaways")
                         </a>
                         <hr>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/LastNews">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/last-news">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastNews")
                         </a>
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/last-added">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.LastAdded")
                         </a>
                     </div>
