--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.JSInterop
 @using pepeizqs_deals_web.Areas.Identity.Data;
+@using Toolbelt.Blazor.HeadElement
 
 @inject UserManager<Usuario> UserManager
 @inject SignInManager<Usuario> SignInManager
@@ -19,13 +20,21 @@
 	}
 </script>
 
+<Title>
+   @titulo • pepeizq's deals
+</Title>
+
+<Meta Property="og:title" Content="@titulo" />
+<Meta Property="description" Content="@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String19")" />
+<Meta Property="robots" Content="index, follow" />
+
 @if (bundlesActuales.Count > 0)
 {
 	@if (mostrarBundleSeleccionado == false)
 	{
-		<div style="font-size: 23px;">
+		<h1 style="font-size: 23px;">
 			@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String1")
-		</div>
+		</h1>
 
 		<hr>
 
@@ -36,11 +45,11 @@
 					<div style="width: 100%; text-align: center; padding: 5px;">
 						@if (bundle.Tipo == Bundles2.BundleTipo.HumbleBundle)
 						{
-							<img src="@bundle.ImagenNoticia" style="max-width: 100%;" />
+							<img src="@bundle.ImagenNoticia" style="max-width: 100%;" alt="@bundle.NombreBundle"/>
 						}
 						else
 						{
-							<img src="@bundle.ImagenBundle" style="max-width: 100%;" />
+							<img src="@bundle.ImagenBundle" style="max-width: 100%;" alt="@bundle.NombreBundle" />
 						}
 
 						<div style="margin-top: 10px; margin-bottom: 5px; text-align: center; font-size: 14px;">
@@ -57,14 +66,14 @@
 			@if (bundleSeleccionado != null)
 			{
 				<div class="perfil" style="margin-bottom: 40px; padding: 30px; display: flex; align-items: center; flex-direction: row; position: -webkit-sticky; position: sticky; top: 70px; z-index: 3;">
-					<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: 70px; text-align: center; font-size: 23px;">
+					<button @onclick="@(e => CerrarBundle(e))" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
 						<i class="fa-solid fa-arrow-left"></i>
 					</button>
 
 					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" style="text-decoration: none; width: 100%; color: var(--colorEnlace);" target="_blank">
 						<div style="display: flex; align-items: center; flex-direction: row;">
 							<div style="height: 60px; padding-left: 40px; padding-right: 20px;">
-								<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" />
+								<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" alt="@bundleSeleccionado.NombreBundle" />
 							</div>
 
 							<div style="padding-left: 20px; padding-right: 20px;">
@@ -78,8 +87,12 @@
 						</div>
 					</a>
 
-					<a href="/bundle?id=@bundleSeleccionado.Id" class="boton-pequeño" style="width: 70px; text-align: center; font-size: 20px; background-color: transparent; color: var(--colorEnlace);">
+					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px; margin-right: 20px;">
 						<i class="fa-solid fa-link"></i>
+					</a>
+
+					<a href="/bundle/@bundleSeleccionado.Id" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
+						<i class="fa-solid fa-plus"></i>
 					</a>					
 				</div>
 
@@ -89,7 +102,7 @@
 
 					foreach (var tier in OrdenarTiers(bundleSeleccionado.Tiers))
 					{
-						<div class="perfil" style="margin-bottom: 40px; padding: 30px;">
+						<div class="perfil" style="margin-bottom: 20px; padding: 5px; background-color: transparent;">
 							@{
 								List<Bundles2.BundleJuego> juegosTier = new List<Bundles2.BundleJuego>();
 
@@ -108,7 +121,7 @@
 
 								if (bundleSeleccionado.Pick == true)
 								{
-									<div style="font-size: 18px; margin-bottom: 10px;">
+									<div style="font-size: 18px; margin-bottom: 20px;">
 										@((MarkupString)MostrarMensajePick(bundleSeleccionado.Tiers))
 									</div>									
 								}
@@ -134,12 +147,10 @@
 										}
 									}
 
-									<div style="font-size: 14px; margin-bottom: 10px;">
+									<div style="font-size: 14px; margin-bottom: 20px;">
 										@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String14"): @ArreglarPrecio(totalMinimos)
 									</div>
 								}
-
-								<hr />
 
 								foreach (var juego in juegosTier)
 								{
@@ -186,7 +197,7 @@
 												@if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
 												{
 													<div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-														<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+														<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
 														<label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
 													</div>
 												}
@@ -200,10 +211,10 @@
 											</div>
 										</div>
 
-										<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent; position: relative; @fondoColor">
+										<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor">
 											<div style="display: flex; align-items: center; padding: 10px;">
 												<div style="text-align: center; width: 17%;">
-													<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
+													<img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
 												</div>
 
 												<div style="padding-left: 20px; padding-right: 20px; text-align: left;">
@@ -213,7 +224,7 @@
 
 													<div style="display: flex; align-items: center;">
 														<div>
-															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
+															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" alt="DRM"/>
 														</div>
 
 														@if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
@@ -308,10 +319,6 @@
 											</div>
 										</a>
 									</div>
-
-									
-
-									<hr />
 								}
 							}
 						</div>
@@ -362,7 +369,9 @@
 							if (bundlesAño.Count > 0)
 							{
 								<div style="margin-right: 15px; font-size: 14px;">
-									<a onclick="moverScroll('pasado-@bundleTipo.ToString()')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;"><img src="@Bundles2.BundlesCargar.DevolverBundle(bundleTipo).ImagenIcono" style="width: 22px; height: 22px;" /> (@bundlesAño.Count.ToString())</a>
+									<a onclick="moverScroll('pasado-@bundleTipo.ToString()')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;">
+										<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleTipo).ImagenIcono" style="width: 22px; height: 22px;" alt="Store"/> (@bundlesAño.Count.ToString())
+									</a>
 								</div>
 							}
 						}
@@ -391,7 +400,7 @@
 
 				<div id="pasado-@bundleTipo.ToString()" style="display: flex; align-items: start;">
 					<div class="perfil" style="width: 20%;">
-						<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleTipo).ImagenTienda" />
+						<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleTipo).ImagenTienda" alt="Store"/>
 					</div>
 
 					<div class="perfil" style="width: 80%;">
@@ -446,6 +455,8 @@
 
 	[Parameter]
 	public string dominio { get; set; }
+
+	private string titulo = string.Empty;
 
 	private List<Bundles2.Bundle> bundlesActuales = new List<Bundles2.Bundle>();
 	private List<Bundles2.Bundle> bundlesPasados = new List<Bundles2.Bundle>();
@@ -538,6 +549,19 @@
 				bundlesActuales = bundlesActuales.OrderBy(x => x.FechaTermina).ToList();
 
 				bundleSeleccionado = bundlesActuales[0];
+
+				if (bundlesActuales.Count == 1)
+				{
+					titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String16"), bundlesActuales.Count.ToString());
+				}
+				else if (bundlesActuales.Count > 1)
+				{
+					titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String17"), bundlesActuales.Count.ToString());
+				}
+			}
+			else if (bundlesActuales.Count == 0)
+			{
+				titulo = Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String18");
 			}
 		}
 	}
