--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -23,18 +23,18 @@
 </Title>
 
 <Meta Property="og:title" Content="@titulo" />
-<Meta Property="description" Content="@Herramientas.Idiomas.CogerCadena(idioma, "Free.String11")" />
+<Meta Property="og:description" Content="@Herramientas.Idiomas.CogerCadena(idioma, "Free.String11")" />
 <Meta Property="robots" Content="index, follow" />
 
 @if (juegosActuales.Count > 0)
 {
-	<div style="font-size: 23px;">
+	<h1 style="font-size: 23px;">
 		@Herramientas.Idiomas.CogerCadena(idioma, "Free.String1")
-	</div>
+	</h1>
 
     <hr>
 
-    <div class="perfil" style="padding: 30px;">
+    <div class="perfil" style="padding: 0px; background-color: transparent;">
         @foreach (var juego in juegosActuales)
         {
             bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
@@ -65,8 +65,8 @@
 
             Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
 
-            <div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-                <div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
+            <div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()-@juego.Tipo.ToString()')">
+                <div id="tooltip-@juego.JuegoId.ToString()-@juego.Tipo.ToString()" class="tooltip-relleno">
                     @if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
                     {
                         <video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
@@ -80,7 +80,7 @@
                         @if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
                         {
                             <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-                                <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+                                <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
                                 <label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
                             </div>
                         }
@@ -94,10 +94,10 @@
                     </div>
                 </div>
 
-                <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent; position: relative; @fondoColor" target="_blank">
+                <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; text-align: center; margin-bottom: 20px; position: relative; @fondoColor" target="_blank">
                     <div style="display: flex; align-items: center; padding: 10px;">
                         <div style="text-align: center; width: 17%;">
-                            <img src="@juego.Imagen" style="width: 100%; height: 100%;" />
+                            <img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
                         </div>
 
                         <div style="padding-left: 20px; padding-right: 20px; text-align: left;">
@@ -110,13 +110,13 @@
                                     Gratis2.Gratis gratis = Gratis2.GratisCargar.DevolverGratis(juego.Tipo);
 
                                     <div>
-                                        <img src="@gratis.ImagenIcono" style="width: 20px; height: 20px;" />
+                                        <img src="@gratis.ImagenIcono" style="width: 20px; height: 20px;" alt="Store"/>
                                     </div>
 
                                     if (gratis.DRMEnseñar == true)
                                     {
                                         <div style="margin-left: 15px;">
-                                            <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
+                                            <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" alt="DRM"/>
                                         </div>
                                     }
 
@@ -192,8 +192,6 @@
                     </div>
                 </a>
             </div>
-            
-            <hr />
         }
     </div>
 }
@@ -231,7 +229,9 @@
                         if (gratisAño.Count > 0)
                         {
                             <div style="margin-right: 15px; font-size: 14px;">
-                                <a onclick="moverScroll('pasado-@gratisPasado.Tipo.Nombre')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;"><img src="@gratisPasado.Tipo.ImagenIcono" style="width: 22px; height: 22px;" /> (@gratisAño.Count.ToString())</a>
+                                <a onclick="moverScroll('pasado-@gratisPasado.Tipo.Nombre')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;">
+                                    <img src="@gratisPasado.Tipo.ImagenIcono" style="width: 22px; height: 22px;" alt="Store"/> (@gratisAño.Count.ToString())
+                                </a>
                             </div>                           
                         }
                     }
@@ -260,7 +260,7 @@
 
             <div id="pasado-@gratisPasado.Tipo.Nombre" style="display: flex; align-items: start;">
                 <div class="perfil" style="width: 20%;">
-                    <img src="@gratisPasado.Tipo.ImagenLogo" />
+                    <img src="@gratisPasado.Tipo.ImagenLogo" alt="Store"/>
                 </div>
 
                 <div class="perfil" style="width: 80%;">
@@ -287,7 +287,7 @@
                                     {
                                         <li>
                                             <a href="/game/@juegoMensual.JuegoId">
-                                                <label style="cursor: pointer;">@juegoMensual.Nombre</label>
+                                                <label style="cursor: pointer;">@juegoMensual.Nombre</label> 
 
                                                 @if (gratisPasado.Tipo.DRMEnseñar == true)
                                                 {
