--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -19,9 +19,9 @@
 
 @if (suscripcionesActuales.Count > 0)
 {
-    <div style="font-size: 23px;">
+    <h1 style="font-size: 23px;">
         @Herramientas.Idiomas.CogerCadena(idioma, "Subscriptions.String1")
-    </div>
+    </h1>
 
     <div>
         @foreach (var suscripcionActual in suscripcionesActuales)
@@ -30,7 +30,7 @@
 
             <div style="display: flex; align-items: start;">
                 <div class="perfil" style="width: 20%;">
-                    <img src="@suscripcionActual.Tipo.ImagenLogo" />
+                    <img src="@suscripcionActual.Tipo.ImagenLogo" alt="@suscripcionActual.Tipo.Nombre"/>
                 </div>
 
                 <div class="perfil" style="width: 80%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 20px;">
@@ -79,7 +79,7 @@
                                     @if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
                                     {
                                         <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-                                            <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+                                            <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
                                             <label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
                                         </div>
                                     }
@@ -95,11 +95,11 @@
 
                             <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 2px; @fondoColor" target="_blank">
                                 <div>
-                                    <img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
+                                    <img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre"/>
                                 </div>
 
                                 <div style="display: flex; align-items: center; justify-content: right; height: 40px;">
-                                    <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 24px; max-height: 24px; margin: 10px;" />
+                                    <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 24px; max-height: 24px; margin: 10px;" alt="DRM"/>
                                 </div>
                             </a>
                         </div>
@@ -143,7 +143,9 @@
                         if (suscripcionAño.Count > 0)
                         {
                             <div style="margin-right: 15px; font-size: 14px;">
-                                <a onclick="moverScroll('pasado-@suscripcionPasada.Tipo.Id.ToString()')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;"><img src="@suscripcionPasada.Tipo.ImagenIcono" style="width: 22px; height: 22px;" /> (@suscripcionAño.Count.ToString())</a>
+                                <a onclick="moverScroll('pasado-@suscripcionPasada.Tipo.Id.ToString()')" style="color: var(--colorTexto); text-decoration: none; cursor: pointer;">
+                                    <img src="@suscripcionPasada.Tipo.ImagenIcono" style="width: 22px; height: 22px;" alt="Store"/> (@suscripcionAño.Count.ToString())
+                                </a>
                             </div>
                         }
                     }
@@ -172,7 +174,7 @@
 
             <div id="pasado-@suscripcionPasada.Tipo.Id.ToString()" style="display: flex; align-items: start;">
                 <div class="perfil" style="width: 20%;">
-                    <img src="@suscripcionPasada.Tipo.ImagenLogo" />
+                    <img src="@suscripcionPasada.Tipo.ImagenLogo" alt="@suscripcionPasada.Tipo.Nombre"/>
                 </div>
 
                 <div class="perfil" style="width: 80%;">
@@ -198,10 +200,8 @@
                                     @foreach (var juegoMensual in suscripcionesMensual)
                                     {
                                         <li>
-                                            <a href="/game/@juegoMensual.JuegoId">
-                                                <label style="cursor: pointer;">@juegoMensual.Nombre</label>
-
-                                                <label style="cursor: pointer;">(@Juegos.JuegoDRM2.DevolverDRM(juegoMensual.DRM))</label>
+                                            <a href="/game/@juegoMensual.JuegoId" style="text-decoration: none;">
+                                                @juegoMensual.Nombre (@Juegos.JuegoDRM2.DevolverDRM(juegoMensual.DRM))
                                             </a>
                                         </li>
                                     }
